# ci-connect-api

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: Entities.h  GroupCommands.h  HTTPRequests.h  Logging.h  PersistentStore.h  ServerUtilities.h  UserCommands.h  Utilities.h  concurrent_multimap.h
resources/: build_rpm.sh
resources/account_generator/: make_training_accounts  remove_training_accounts
resources/api_specification/: CheckUnixNameResultSchema.json  FieldListResultSchema.json  FindUserResultSchema.json  GroupCreateRequestSchema.json  GroupInfoResultSchema.json  GroupListResultSchema.json  GroupRequestDenialSchema.json  GroupRequestListResultSchema.json  GroupUpdateRequestSchema.json  GroupUpdateResultSchema.json  GroupUserMembershipResultSchema.json  GroupUsersMembershipResultSchema.json  UserAttributeResultSchema.json  UserCreateRequestSchema.json  UserGroupMembershipResultSchema.json  UserGroupMembershipUpdateRequestSchema.json  UserGroupsMembershipResultSchema.json  UserInfoResultSchema.json  UserUpdateRequestSchema.json  api.raml
resources/container/: example-bootstrap
resources/plugins/: logger-plugin  osg-plugin
resources/provisioner/: sync_users.sh  sync_users_debian.sh
resources/rpm_specs/: ci-connect-api.spec
src/: Entities.cpp  GroupCommands.cpp  HTTPRequests.cpp  PersistentStore.cpp  Process.cpp  ServerUtilities.cpp  UserCommands.cpp  Utilities.cpp  ciconnect_service.cpp  sync_users.cpp
